<resources xmlns:tools="http://schemas.android.com/tools">

    <!--APP SETTINGS-->
    <string name="app_name">MoviesAoo</string>
    <string name="PREF_DEF">MoviesAoo_PREFS</string>
    <string name="API_BASE_URL">https://api.themoviedb.org</string>
    <string name="app_lenguage">pt-BR</string>
    <string name="image_service_URL" tools:keep="@string/image_service_URL">https://image.tmdb.org/t/p/w500</string>

    <!--Fonts-->
    <string name="m_bold">m_bold</string>
    <string name="m_extra_bold">m_extra_bold</string>
    <string name="m_light">m_light</string>
    <string name="m_regular">m_regular</string>
    <string name="m_medium">m_medium</string>
    <string name="u_light">u_light</string>
    <string name="u_medium">u_medium</string>
    <string name="u_bold">u_bold</string>
    <string name="u_regular">u_regular</string>

    <!--Words and phrases-->
    <string name="error_default">ocorreu um erro</string>
    <string name="MOVIES_AOO_PREF">MV_PREF</string>
    <string name="loading">carregando</string>
    <string name="atention">atenção</string>
    <string name="ok">OK</string>
    <string name="yes">sim</string>
    <string name="no">não</string>
    <string name="title_activity_splash_screen">MoviesAoo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="movie_title">Título do filme</string>
    <string name="choose_gender">Selecionar um gênero</string>
    <string name="see_all_gender">Ver todods do gênero</string>
    <string name="redirecting">Redirecionando em</string>
    <string name="seconds">segundos...</string>
    <string name="could_not_find_movies_genre">Não foi possível localizar filmes deste gênero</string>
    <string name="title_activity_movies_list">MoviesListActivity</string>
    <string name="movies">movies</string>
    <string name="login">LOGIN</string>
    <string name="select_a_title_or_choose_genre">Selecione uma categoria e/ou digite um título de pesquisa</string>
    <string name="or_select_an_genre">Ou pesquise um gênero</string>
    <string name="search_by_name">Pesquise pelo nome</string>
    <string name="sort_by">Ordernar por</string>
    <string name="best_rating">Melhor avaliado</string>
    <string name="popular">Mais popular</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="title">Título: </string>
    <string name="original_lg">Idioma de origem: </string>
    <string name="overview">Overview: </string>
    <string name="release_date">Data de lançamento: </string>
    <string name="popularity">Popularidade: </string>
    <string name="rating">Nota: </string>
    <string name="vote_count">Quantidade de votos: </string>
    <string name="original_title">Título original: </string>
    <string name="title_activity_samp">SampActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user_preference">UserPreferenceActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">favorites</string>
    <string name="click_to_see_trailer">click here and see trailer</string>
    <string name="trailers">Trailers</string>
    <string name="users_ratings">Avaliações de usuários</string>
    <string name="tp_rated">Melhor avaliados</string>
    <string name="most_pop">Mais populares</string>
    <string name="filter">Filtro</string>
    <string name="favorites_list">Somente favoritos</string>
    <string name="no_connection_av">Não há conexão de internet</string>
    <string name="offline_message">Offline, tente novamente mais tarde</string>
    <string name="movie_image">movie image</string>
    <string name="movie_banner">movie banner</string>

</resources>
