<layout>

    <data>

        <variable
            name="movie"
            type="com.example.silvio.moviesaoo.viewmodel.MovieDetailsViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            tools:context="com.example.silvio.moviesaoo.view.MovieDetailsActivity">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="15dp"
                app:imageUrl="@{movie.movieImgUrl}"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/title"
                    android:layout_toRightOf="@+id/title"
                    android:text="@{movie.title}"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lenguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_lg"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/lenguage"
                    android:layout_toRightOf="@+id/lenguage"
                    android:text="@{movie.originalLenguage}"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/original_ttl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_title"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/original_ttl"
                    android:layout_toRightOf="@id/original_ttl"
                    android:text="@{movie.originalTitle}"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/overview"
                    android:layout_toRightOf="@id/overview"
                    android:text="@{movie.overview}"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/release"
                    android:layout_toRightOf="@id/release"
                    android:text="@{movie.releaseDate}"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/popularity"
                    android:layout_toRightOf="@id/popularity"
                    android:text="@{movie.popularity}"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/votesaverega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/votesaverega"
                    android:layout_toRightOf="@id/votesaverega"
                    android:text="@{movie.voteAvarage}"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/votecount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_count"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/votecount"
                    android:layout_toRightOf="@id/votecount"
                    android:text="@{movie.voteCount}"
                    android:textColor="@color/black"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</layout>
