<layout>

    <data>

        <variable
            name="homeViewModel"
            type="com.example.silvio.moviesaoo.viewmodel.HomeViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawerlt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_ldef"
            android:orientation="vertical"
            tools:context="com.example.silvio.moviesaoo.view.HomeActivity">

            <TextView
                android:id="@+id/header_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/search_by_name"
                android:textColor="@color/black"
                android:textSize="@dimen/big_tv_size"
                app:font="@{@string/m_bold}" />

            <RadioGroup
                android:id="@+id/radio_lt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_tip"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:checkedButton="@id/best_rating"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/best_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{()->homeViewModel.onCheckStateSet()}"
                    android:text="@string/best_rating" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:onCheckedChanged="@{()->homeViewModel.onCheckStateSet()}"
                    android:text="@string/popular" />
            </RadioGroup>

            <android.support.v7.widget.CardView
                android:id="@+id/card_top_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radio_lt"
                android:layout_marginLeft="@dimen/default_card_margin"
                android:layout_marginRight="@dimen/default_card_margin"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:elevation="6dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:textColorHint="@color/black">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="18dp"
                            android:background="@color/transparent"
                            android:hint="@string/movie_title"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:nextFocusDown="@id/btn_container"
                            android:singleLine="true"
                            android:text="@={homeViewModel.movieName}"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/m_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_top_container"
                android:layout_margin="20dp"
                android:text="@string/or_select_an_genre"
                android:textColor="@color/black"
                android:textSize="19sp"
                app:font="@{@string/m_bold}" />

            <RelativeLayout
                android:id="@+id/spinner_lyout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_tip"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_cornered"
                android:minHeight="28dp"
                android:textSize="20sp">

                <Spinner
                    android:id="@+id/genres_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/selector_cornered">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="@{()->homeViewModel.onSearchClick()}"
                    android:text="Pesquisar"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/m_bold}" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>
